# Urfit

./: AUTHORS  Makefile.am  NEWS  README.md  configure  configure.ac
examples/f_pi/: Readme.md
src/: Mainfile.c  Makefile  Makefile.am  Makefile.in
src/ANALYSIS/: CPCV.c  HAL.c  HLBL.c  KK_BK.c  KKops.c  Omega_fit.c  Qcorr.c  Qcorr_fixed.c  Qmoments.c  Ren_rats.c  SpinOrbit.c  Wall_Local.c  ZV.c  adler.c  alphas.c  an_wrapper.c  beta_crit.c  binding_corr.c  c4c7_analysis.c  correlator.c  decay_wilson.c  exceptional.c  flycheck_pof.c  flycheck_statpot.c  general_ops.c  hvp_pade.c  inverse.c  nonexceptional.c  nrqcd.c  nrqcd_baremass.c  nrqcd_old.c  nrqcd_slope.c  pof.c  sol.c  statpot.c  su2_shit.c  sun_flow.c  tetra_gevp.c  udcb.c
src/EFFMASS/: blackbox.c  effmass.c  gevp.c  gevp2.c
src/FITS/: HALexp.c  HLBL_cont.c  LargeNB.c  Nder.c  Pexp.c  Qcorr_bessel.c  SUN_cont.c  ZV_exp.c  adler_alpha_D0.c  adler_alpha_D0_multi.c  alpha_D0.c  alpha_D0_multi.c  alpha_D0_multi_new.c  c4c7.c  cornell.c  cornell_v2.c  cosh.c  cosh_asymm.c  cosh_plusc.c  exp.c  exp_plusc.c  exp_xinv.c  fit_chooser.c  fsol.c  fsol2.c  fvol1.c  fvol2.c  fvol3.c  fvol4.c  fvol5.c  fvol6.c  fvol_delta.c  fvol_delta_fitt0.c  fvol_delta_fitt0v2.c  fvolcc.c  nrqcd_exp.c  nrqcd_exp2.c  pade.c  pmap.c  poles.c  (+15 more)
src/GRAPH/: make_xmgrace.c  plot_fitfunc.c
src/HEADERS/: BFGS.h  CG.h  CPCV.h  GA.h  GLS.h  GLS_pade.h  GLU_bswap.h  HAL.h  HALexp.h  HLBL.h  HLBL_cont.h  KK_BK.h  KKops.h  LM.h  LargeNB.h  NR.h  Nder.h  Nint.h  Omega_fit.h  Pexp.h  Qcorr.h  Qcorr_bessel.h  Qcorr_fixed.h  Qmoments.h  Ren_rats.h  SD.h  SUN_cont.h  Simplex.h  SpinOrbit.h  Wall_Local.h  ZV.h  ZV_exp.h  adler.h  adler_alpha_D0.h  adler_alpha_D0_multi.h  alpha_D0.h  alpha_D0_multi.h  alpha_D0_multi_new.h  alphas.h  an_wrapper.h  (+115 more)
src/INIT/: fake.c  init.c
src/IO/: GLU_bswap.c  distribution.c  io_wrapper.c  read_Adler.c  read_GLU.c  read_GLU_Qmoment.c  read_GLU_tcorr.c  read_UKhadron.c  read_corr.c  read_corr_multi.c  read_flat.c  tfold.c  write_flat.c
src/IO/INPUT/: read_fit.c  read_graph.c  read_inputs.c  read_stats.c  read_traj.c
src/MINIMIZE/: BFGS.c  CG.c  GA.c  GLS.c  GLS_pade.c  LM.c  SD.c  Simplex.c  line_search.c  powell.c
src/PHYSICS/: cruel_runnings.c  decays.c  momenta.c  sort.c
src/PHYSICS/.deps/: decays.Po
src/RUN/: bootfit.c  fit_and_plot.c  fit_chooser.c  gls_bootfit.c
src/STATS/: autocorr.c  bin.c  bootstrap.c  correlation.c  jacknife.c  pvalue.c  raw.c  resampled_ops.c  reweight.c  stats.c
src/UTILS/: NR.c  Nint.c  chisq.c  crc32c.c  ffunction.c  gen_ders.c  histogram.c  pade_coefficients.c  pade_laplace.c  poly_coefficients.c  rng.c  summation.c  svd.c
